# Asynchronous-Payment-Processing-Service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20260331_0001_init_payments_outbox.py
app/: __init__.py  config.py  consumer.py  logging.py  main.py
app/api/: dependencies.py  errors.py
app/api/routes/: payments.py
app/application/: gateway.py  payments.py  processor.py
app/db/: models.py  session.py
app/domain/: enums.py  errors.py
app/infrastructure/: messaging.py  outbox_relay.py  repositories.py  retry.py  webhook.py
app/schemas/: common.py  events.py
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_consumer.py  test_messaging_topology.py
tests/unit/: test_gateway.py  test_outbox_relay.py  test_payment_service.py  test_processor_idempotency.py  test_retry.py  test_schemas.py  test_security.py  test_webhook.py  test_webhook_lock.py
